--- a/templates/base.html
+++ b/templates/base.html
@@ -123,7 +123,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="{% url 'analises:fosforo_create' %}">
+                                    <a class="dropdown-item" href="{% url 'analises:cadastro_fosforo' %}">
                                         <i class="bi bi-lightning-fill me-2 text-success"></i>Novo Fósforo
                                     </a>
                                 </li>
@@ -179,7 +179,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="{% url 'analises:fosforo_list' %}">
+                                    <a class="dropdown-item" href="{% url 'analises:lista_fosforo' %}">
                                         <i class="bi bi-lightning-fill me-2 text-success"></i>Lista Fósforo
                                     </a>
                                 </li>
