feat: Implementação completa do sistema de análises
- Adicionada nova análise de Sílica com cálculo automático (Cinza - Sílica)
- Padronização completa do CRUD para todas as análises (Umidade, Proteína, Óleo, Sílica, etc.)
- Interface moderna com Bootstrap 5 e grid responsivo
- Templates padronizados para listagem, cadastro, edição e exclusão
- Home page atualizada com todas as 9 análises em layout organizado
- Navegação limpa e consistente
- Configuração do .gitignore para excluir banco de dados e migrations

--- a/analises/templates/app/lista_urase.html
+++ b/analises/templates/app/lista_urase.html
@@ -44,14 +44,20 @@
                             {% endif %}
                         </td>
                         <td>
-                            <div class="btn-group" role="group">
-                                <a href="{% url 'analises:urase_detail' analise.pk %}" class="btn btn-sm btn-outline-primary" title="Visualizar">
+                            <div class="btn-group btn-group-sm" role="group">
+                                <a href="{% url 'analises:urase_detail' analise.pk %}" 
+                                   class="btn btn-outline-info" 
+                                   title="Visualizar">
                                     <i class="bi bi-eye"></i>
                                 </a>
-                                <a href="{% url 'analises:urase_update' analise.pk %}" class="btn btn-sm btn-outline-warning" title="Editar">
+                                <a href="{% url 'analises:urase_update' analise.pk %}" 
+                                   class="btn btn-outline-warning" 
+                                   title="Editar">
                                     <i class="bi bi-pencil"></i>
                                 </a>
-                                <a href="{% url 'analises:urase_delete' analise.pk %}" class="btn btn-sm btn-outline-danger" title="Excluir">
+                                <a href="{% url 'analises:urase_delete' analise.pk %}" 
+                                   class="btn btn-outline-danger" 
+                                   title="Excluir">
                                     <i class="bi bi-trash"></i>
                                 </a>
                             </div>
