--- a/analises/templates/app/home_analises.html
+++ b/analises/templates/app/home_analises.html
@@ -44,11 +44,99 @@
             <div class="card h-100">
                 <div class="card-body text-center">
                     <i class="bi bi-droplet-half text-warning" style="font-size: 3rem;"></i>
-                    <h5 class="card-title mt-3">Análises de Óleo</h5>
+                    <h5 class="card-title mt-3">Análises de Óleo Degomado</h5>
                     <p class="card-text">Registre e visualize análises de óleo degomado.</p>
                     <div class="d-grid gap-2">
                         <a href="{% url 'analises:oleo_create' %}" class="btn btn-warning">Nova Análise</a>
                         <a href="{% url 'analises:oleo_list' %}" class="btn btn-outline-warning">Ver Lista</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-4 mb-4">
+            <div class="card h-100">
+                <div class="card-body text-center">
+                    <i class="bi bi-activity text-warning" style="font-size: 3rem;"></i>
+                    <h5 class="card-title mt-3">Análises de Teor de Óleo</h5>
+                    <p class="card-text">Registre e visualize análises de teor de óleo da soja.</p>
+                    <div class="d-grid gap-2">
+                        <a href="{% url 'analises:teor_oleo_create' %}" class="btn btn-warning">Nova Análise</a>
+                        <a href="{% url 'analises:teor_oleo_list' %}" class="btn btn-outline-warning">Ver Lista</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4 mb-4">
+            <div class="card h-100">
+                <div class="card-body text-center">
+                    <i class="bi bi-graph-up text-info" style="font-size: 3rem;"></i>
+                    <h5 class="card-title mt-3">Análises de Fósforo</h5>
+                    <p class="card-text">Registre e visualize análises de fósforo da soja.</p>
+                    <div class="d-grid gap-2">
+                        <a href="{% url 'analises:cadastro_fosforo' %}" class="btn btn-info">Nova Análise</a>
+                        <a href="{% url 'analises:lista_fosforo' %}" class="btn btn-outline-info">Ver Lista</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4 mb-4">
+            <div class="card h-100">
+                <div class="card-body text-center">
+                    <i class="bi bi-activity text-danger" style="font-size: 3rem;"></i>
+                    <h5 class="card-title mt-3">Análises de Urase</h5>
+                    <p class="card-text">Registre e visualize análises de urase da soja.</p>
+                    <div class="d-grid gap-2">
+                        <a href="{% url 'analises:urase_create' %}" class="btn btn-danger">Nova Análise</a>
+                        <a href="{% url 'analises:urase_list' %}" class="btn btn-outline-danger">Ver Lista</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-4 mb-4">
+            <div class="card h-100">
+                <div class="card-body text-center">
+                    <i class="bi bi-layers text-secondary" style="font-size: 3rem;"></i>
+                    <h5 class="card-title mt-3">Análises de Cinza</h5>
+                    <p class="card-text">Registre e visualize análises de cinza da soja.</p>
+                    <div class="d-grid gap-2">
+                        <a href="{% url 'analises:cinza_create' %}" class="btn btn-secondary">Nova Análise</a>
+                        <a href="{% url 'analises:cinza_list' %}" class="btn btn-outline-secondary">Ver Lista</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4 mb-4">
+            <div class="card h-100">
+                <div class="card-body text-center">
+                    <i class="bi bi-layers-half text-dark" style="font-size: 3rem;"></i>
+                    <h5 class="card-title mt-3">Análises de Sílica</h5>
+                    <p class="card-text">Calcule o resultado final: Cinza - Sílica.</p>
+                    <div class="d-grid gap-2">
+                        <a href="{% url 'analises:silica_create' %}" class="btn btn-dark">Nova Análise</a>
+                        <a href="{% url 'analises:silica_list' %}" class="btn btn-outline-dark">Ver Lista</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4 mb-4">
+            <div class="card h-100">
+                <div class="card-body text-center">
+                    <i class="bi bi-filter text-success" style="font-size: 3rem;"></i>
+                    <h5 class="card-title mt-3">Análises de Fibra</h5>
+                    <p class="card-text">Registre e visualize análises de fibra da soja.</p>
+                    <div class="d-grid gap-2">
+                        <a href="{% url 'analises:fibra_create' %}" class="btn btn-success">Nova Análise</a>
+                        <a href="{% url 'analises:fibra_list' %}" class="btn btn-outline-success">Ver Lista</a>
                     </div>
                 </div>
             </div>
@@ -61,14 +149,9 @@
                 <div class="card-body">
                     <h5 class="card-title">Acesso Rápido</h5>
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-12">
                             <a href="{% url 'relatorios:gerar' %}" class="btn btn-info w-100 mb-2">
                                 <i class="bi bi-file-earmark-bar-graph me-2"></i>Gerar Relatórios
-                            </a>
-                        </div>
-                        <div class="col-md-6">
-                            <a href="{% url 'analises:home' %}" class="btn btn-secondary w-100 mb-2">
-                                <i class="bi bi-house me-2"></i>Voltar à Página Inicial
                             </a>
                         </div>
                     </div>
