--- a/templates/base.html
+++ b/templates/base.html
@@ -113,6 +113,11 @@
                                     </a>
                                 </li>
                                 <li>
+                                    <a class="dropdown-item" href="{% url 'analises:silica_create' %}">
+                                        <i class="bi bi-layers-half me-2 text-dark"></i>Nova Sílica
+                                    </a>
+                                </li>
+                                <li>
                                     <a class="dropdown-item" href="{% url 'analises:teor_oleo_create' %}">
                                         <i class="bi bi-droplet-half me-2 text-warning"></i>Novo Teor de Óleo
                                     </a>
@@ -169,6 +174,11 @@
                                     </a>
                                 </li>
                                 <li>
+                                    <a class="dropdown-item" href="{% url 'analises:silica_list' %}">
+                                        <i class="bi bi-layers-half me-2 text-dark"></i>Lista Sílica
+                                    </a>
+                                </li>
+                                <li>
                                     <a class="dropdown-item" href="{% url 'analises:teor_oleo_list' %}">
                                         <i class="bi bi-droplet-half me-2 text-warning"></i>Lista Teor de Óleo
                                     </a>
@@ -201,10 +211,7 @@
                             </a>
                         </li>
                     {% endif %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'relatorios:gerar' %}">Relatórios</a>
-                        </li>
-                    {% endif %}
+                {% endif %}
             </ul>
 
             <ul class="navbar-nav ms-auto">
